finishing admin update employee and other edits